# template-near-contract

./: .gitignore  Cargo.toml  README.md  README.org
.cargo/: config
neardev/: dev-account  dev-account.env
src/: ecommerce.rs  lib.rs  metadata.rs
