[package]
authors = ["Dang Quang Vu <eamondang@gmail.com>"]
edition = "2021"
name = "template-near-contract"
version = "0.1.1"
description = "A Start Templates for Near SmartContract"
license = "MIT"
homepage = "https://github.com/eamondang/near-app-contract"
repository = "https://github.com/eamondang/near-app-contract"
keywords = ["near", "template", "contract", "eamon"]
categories = ["template"]

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
overflow-checks = true
panic = "abort"

[dependencies]
near-sdk = "4.1.1"
